--- a/XBC/XBC.MVC/Web.config
+++ b/XBC/XBC.MVC/Web.config
@@ -11,12 +11,20 @@
 		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
 	</appSettings>
 	<system.web>
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/Index" timeout="2880" />
+    </authentication>
 		<compilation debug="true" targetFramework="4.5" />
 		<httpRuntime targetFramework="4.5" />
 		<httpModules>
 			<add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
 		</httpModules>
 	</system.web>
+  <system.webServer>
+    <modules>
+      <remove name="FormsAuthentication" />
+    </modules>
+  </system.webServer>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
@@ -79,7 +87,9 @@
 		<validation validateIntegratedModeConfiguration="false" />
 	</system.webServer>
   <connectionStrings>
-    <add name="XBCContext" connectionString="data source=RIDHOEMGL\RIDHOEMGL;initial catalog=XBC_DB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="XBCContext" connectionString="data source=DESKTOP-K7HF4S8\SQLEXPRESS;initial catalog=XSIS_XBC_181;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-XBC.MVC.WebApp-20181214111241.mdf;Initial Catalog=aspnet-XBC.MVC.WebApp-20181214111241;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 	<system.codedom>
 		<compilers>
